# flatica

./: .gitignore  main.py  pyproject.toml
flat/: cache_core.py  parser.py
